--- a/trunk/tasma/tasma/applnk/desktop/tasmaclock.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmaclock.desktop
@@ -12,13 +12,16 @@ X-KDE-ParentApp=tasma
 Name=Date & Time
 Name[tr]=Tarih ve Saat
 Name[nl]=Datum en Tijd
+Name[es]=Fecha & Hora
 
 Comment=Date and time settings
 Comment[tr]=Tarih ve saat ayarları
 Comment[nl]=Instellen van datum en tijd
+Comment[es]=Configuración de Fecha y Hora
 
 Keywords=clock,date,time,time zone
 Keywords[tr]=tarih,saat,saat dilimi,zaman,zaman dilimi
 Keywords[nl]=datum,tijd,tijdszone,klok
+Keywords[es]=reloj,fecha,hora,zona horaria
 
 Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-localization
