--- a/trunk/tasma/tasma/applnk/desktop/tasmadesktop.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmadesktop.desktop
@@ -13,13 +13,16 @@ X-KDE-ParentApp=tasma
 Name=Multiple Desktops
 Name[tr]=Çoklu Masaüstü
 Name[nl]=Virtuele bureaubladen
+Name[es]=Escritorios múltiples
 
 Comment=You can configure how many virtual desktops there are.
 Comment[tr]=Kaç görsel masaüstüne sahip olacağınızı buradan yapılandırabilirsiniz.
 Comment[nl]=U kunt hier bepalen hoeveel virtuele bureaubladen u wilt gebruiken.
+Comment[es]=Puede configurar la cantidad de escritorios virtuales.
 
 Keywords=desktop,desktops,number,virtual desktop
 Keywords[tr]=masaüstü,isim,masaüstü sayısı,sanal masaüstü
 Keywords[nl]=desktop,bureaublad,bureaubladen,naam van bureaublad,nummer,bureaubladtelling,virtuele bureaubladen
+Keywords[es]=escritorio,escritorios,número,escritorio virtual
 
 Categories=Qt;KDE;X-KDE-settings-desktop;X-KDE-tasma-desktop
