--- a/trunk/tasma/tasma/applnk/desktop/tasmafonts.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmafonts.desktop
@@ -13,13 +13,16 @@ X-KDE-ParentApp=tasma
 Name=Fonts
 Name[tr]=Yazıtipleri
 Name[nl]=Lettertypen
+Name[es]=Fuentes
 
 Comment=Font settings
 Comment[tr]=Yazıtipi ayarları
 Comment[nl]=Lettertypeninstellingen
+Comment[es]=Configuración de Fuentes
 
 Keywords=fonts,font size,styles,charsets,character sets,panel,kicker,control panel,desktops,FileManager,Toolbars,Menu,Window Title,Title
 Keywords[tr]=yazıtipleri,yazı boyutu,stil,karakter kümesi,panel,kicker,denetim masası,masaüstü,masaüstleri,Araç Çubuğu,Menü,Pencere Başlığı,Başlık
 Keywords[nl]=fonts,font,letters,lettertypen,lettertypes,tekenset,tekenverzamelingen,paneel,kicker,configuratiecentrum,stijl,bestandsbeheerder,werkbalk,menu,venster,titel,venstertitel,desktops,bureaubladen
+Keywords[es]=fuentes,tamaño de fuentes,estilos,juegos de caracteres,panel,kicker,panel de control,escritorios,Administrador de Archivos,Barras de Herramientas,Menu,Título de Ventana,Título
 
 Categories=Qt;KDE;X-KDE-settings-looknfeel;X-KDE-tasma-looknfeel
