--- a/trunk/tasma/tasma/applnk/desktop/tasmaicons.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmaicons.desktop
@@ -13,13 +13,16 @@ X-KDE-ParentApp=tasma
 Name=Icons
 Name[tr]=Simgeler
 Name[nl]=Pictogrammen
+Name[es]=Íconos
 
 Comment=Customize KDE Icons
 Comment[tr]=KDE Simgelerini Özelleştirir
 Comment[nl]=KDE-pictogrammen aanpassen
+Comment[de]=Personalizar Íconnos KDE
 
 Keywords=icons,effects,size,hicolor,locolor
 Keywords[tr]=simgeler,efektler,boyut,yüksek renk,düşük renk
 Keywords[nl]=iconen,pictogrammen,effecten,grootte,afmeting,formaat,kleuren
+Keywords[es]=íconos,efectos,tamaño,hicolor,locolor
 
 Categories=Qt;KDE;X-KDE-settings-looknfeel;X-KDE-tasma-looknfeel
