--- a/trunk/tasma/tasma/applnk/desktop/tasmakeys.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmakeys.desktop
@@ -13,13 +13,16 @@ X-KDE-ParentApp=tasma
 Name=Keyboard Shortcuts
 Name[tr]=Klavye Kısayolları
 Name[nl]=Sneltoetsen
+Name[es]=Teclas de Acceso rápido
 
 Comment=Configuration of keybindings
 Comment[tr]=Tuş bağıntılarının yapılandırılması
 Comment[nl]=Instellingen voor sneltoetsen
+Comment[es]=Configuración de teclas rápidas
 
 Keywords=Keys,Global key bindings,Key scheme,Key bindings,shortcuts,application shortcuts
 Keywords[tr]=tuşlar,Küresel Tuş bağlantıları,Tuş planı,tuş bağlamaları,kısayollar,uygulama kısayolları
 Keywords[nl]=keys,toetsen,toetsenindeling,toetsenbindingen,key bindings,sneltoetsen,globale toetsenbindingen
+Keywords[es]=Teclas,Global key bindings,Esquema de teclas,Key bindings,accesos rápidos,accesos rápidos a programas
 
 Categories=Qt;KDE;X-KDE-settings-accessibility;X-KDE-tasma-peripherals
