--- a/trunk/tasma/tasma/applnk/desktop/tasmakhotkeys.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmakhotkeys.desktop
@@ -16,7 +16,7 @@ Name[cs]=Vstupní činnosti
 Name[da]=Indgiv handlinger
 Name[de]=Tastenkombinationen
 Name[el]=Ενέργειες εισόδου
-Name[es]=Introducir acciones
+Name[es]=Acciones de Entrada
 Name[et]=Sisestustoimingud
 Name[eu]=Sarrerako ekintzak
 Name[fi]=Syöttötoiminnot
