--- a/trunk/tasma/tasma/applnk/desktop/tasmakwindecoration.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmakwindecoration.desktop
@@ -12,13 +12,16 @@ X-KDE-FactoryName=kwindecoration
 Name=Window Decorations
 Name[tr]=Pencere Dekorasyonları
 Name[nl]=Vensterdecoraties
+Name[es]=Decoraciones de Ventanas
 
 Comment=Configure the look and feel of window titles
 Comment[tr]=Pencere başlıklarını görünümlerini yapılandır
 Comment[nl]=Hier kunt u het uiterlijk en gedrag van venstertitels instellen
+Comment[es]=Configuración de look & feel de los títulos de las ventanas
 
 Keywords=kwin,window,manager,border,style,theme,look,feel,layout,button,handle,edge,kwm,decoration
 Keywords[tr]=kwin,pencere,yönetici,kenar,stil,tema,görünüş,doku,yerleşim,düğme,tutamaç,kenar,kwm,dekorasyon
 Keywords[nl]=kwin,window,manager,rand,stijl,theme,thema,look,uiterlijk,gedrag,feel, layout,opmaak,button,knoppen,handle,rand,kwm,decoratie,windowmanager,venster,vensterbeheer
+Keywords[es]=kwin,ventana,administrador,borde,estilo,tema,look,feel,layout,botón,handle,esquina,kwm,decoración
 
 Categories=Qt;KDE;X-KDE-settings-looknfeel;X-KDE-tasma-looknfeel
