--- a/trunk/tasma/tasma/applnk/desktop/tasmaproxy.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmaproxy.desktop
@@ -12,13 +12,16 @@ X-KDE-ParentApp=tasma
 
 Name=Proxy
 Name[tr]=Vekil Sunucu
+Name[es]=Proxy
 
 Comment=Configure the proxy servers used
 Comment[tr]=Vekil sunucularını yapılandırır
 Comment[nl]=Hier kunt u de Proxy-servers instellen
+Comment[es]=Configuración del servidor proxy
 
 Keywords=Proxy,Proxy server,Firewall,Squid,proxy
 Keywords[tr]=Vekil,Vekil sunucu,Güvenlik duvarı,Squid,proxy
 Keywords[nl]=proxy,proxy server,firewall,squid
+Keywords[es]=proxy,servidor proxy server,firewall,cortafuegos,squid
 
 Categories=Qt;KDE;X-KDE-settings-network;X-KDE-tasma-network
