--- a/trunk/tasma/tasma/applnk/desktop/tasmasamba.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmasamba.desktop
@@ -23,7 +23,7 @@ Comment[cs]=Modul pro konfiguraci sdílených prostředků MS Windows
 Comment[da]=Et modul til at indstille shares delt med Microsoft Windows
 Comment[de]=Ein Modul zum Einrichten von Microsoft Windows-Freigaben
 Comment[el]=Ένα άρθρωμα για τη ρύθμιση κοινόχρηστων για τα Microsoft Windows
-Comment[es]=Un modulo para configurar recursos compartidos de Microsoft Windows
+Comment[es]=Un módulo para configurar recursos compartidos de Microsoft Windows
 Comment[et]=Microsoft Windowsi jagatud ressursside seadistusmoodul
 Comment[eu]=Microsoft Windows-en partekatzeak konfiguratzeko modulu bat
 Comment[fr]=Un module permettant de configurer les partages Microsoft Windows
@@ -54,6 +54,7 @@ Keywords[bg]=Самба, Уиндоус, мрежа, споделяне, KcmSamb
 Keywords[ca]=KcmSambaConf,kcmsambaconf,samba,windows,share,recurs compartit
 Keywords[cs]=Samba,nastavení,windows,sdílení
 Keywords[de]=KcmSambaConf,kcmsambaconf,samba,windows,freigabe
+Keywords[es]=KcmSambaConf,kcmsambaconf,samba,windows,compartir, compartido
 Keywords[et]=KcmSambaConf,kcmsambaconf,samba,windows,jagatud ressursid
 Keywords[eu]=KcmSambaConf,kcmsambaconf,samba,windows,partekatze
 Keywords[fr]=KcmSambaConf,kcmsambaconf,samba,windows,partage
