--- a/tasma/tasma/modules/tasmatv/tasmatv.desktop
+++ b/tasma/tasma/modules/tasmatv/tasmatv.desktop
@@ -12,6 +12,8 @@ X-KDE-SubstituteUID=true
 
 Name=Tv Card Configuration
 Name[tr]=Tv Kartı Yapılandırması
+Name[es]=Configuración de Tarjeta de TV
+Name[de]=Konfiguration der TV Karte
 
 Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-sound
 
