--- a/trunk/tasma/service-manager/src/service-manager.desktop
+++ b/trunk/tasma/service-manager/src/service-manager.desktop
@@ -1,8 +1,10 @@
 [Desktop Entry]
 Name=Service Manager
 Name[tr]=Servis Yöneticisi
+Name[es]=Administrador de Servicios
 GenericName[en]=Service Management Interface
 GenericName[tr]=Servis Yönetim Arabirimi
+GenericName[es]=Interfaz de Administración de Servicios
 Icon=service_manager
 X-KDE-ModuleType=Library
 X-KDE-Library=service-manager
