--- a/trunk/kio-to-local/CMakeLists.txt
+++ b/trunk/kio-to-local/CMakeLists.txt
@@ -11,5 +11,5 @@ KDE3_ADD_EXECUTABLE(kio-to-local ${kio-to-local_sources})
 TARGET_LINK_LIBRARIES(kio-to-local ${QT_AND_KDECORE_LIBS} kio kdeui)
 
 # Install
-INSTALL_FILES(/bin FILES kio-to-local)
+INSTALL_TARGETS(/bin kio-to-local)
 
