--- a/trunk/kaptan/themes/CMakeLists.txt
+++ b/trunk/kaptan/themes/CMakeLists.txt
@@ -1,2 +1,2 @@
-INSTALL_FILES(/share/apps/kaptan/themes/KDE FILES KDE.preview.png KDE.xml)
-INSTALL_FILES(/share/apps/kaptan/themes/KDE_Classic FILES KDE_Classic.preview.png KDE_Classic.xml)
+ADD_SUBDIRECTORY(KDE)
+ADD_SUBDIRECTORY(KDE_Classic)
