--- a/kaptan/themes/KDE/CMakeLists.txt
+++ b/kaptan/themes/KDE/CMakeLists.txt
@@ -1,1 +1,1 @@
-INSTALL_FILES(/share/apps/kaptan/themes/KDE FILES KDE.preview.png KDE.xml)
+INSTALL_FILES(/share/apps/kaptan/themes/KDE FILES KDE.preview.png KDE_kickoff.preview.png KDE.xml)
