--- a/trunk/tasma/tasma/applnk/desktop/tasmaclock.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmaclock.desktop
@@ -13,15 +13,18 @@ Name=Date & Time
 Name[tr]=Tarih ve Saat
 Name[nl]=Datum en Tijd
 Name[es]=Fecha & Hora
+Name[de]=Datum & Uhrzeit
 
 Comment=Date and time settings
 Comment[tr]=Tarih ve saat ayarları
 Comment[nl]=Instellen van datum en tijd
 Comment[es]=Configuración de Fecha y Hora
+Comment[de]=Datum und Uhrzeit Einstellungen
 
 Keywords=clock,date,time,time zone
 Keywords[tr]=tarih,saat,saat dilimi,zaman,zaman dilimi
 Keywords[nl]=datum,tijd,tijdszone,klok
 Keywords[es]=reloj,fecha,hora,zona horaria
+Keywords[de]=Uhr,Datum,Uhrzeit,Zeitzone
 
 Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-localization
