--- a/trunk/tasma/tasma/applnk/desktop/tasmacolors.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmacolors.desktop
@@ -14,15 +14,18 @@ Name=Colors
 Name[tr]=Renkler
 Name[nl]=Kleuren
 Name[es]=Colores
+Name[de]=Farben
 
 Comment=Color settings
 Comment[tr]=Renk ayarları
 Comment[nl]=Kleuren instellen
 Comment[es]=Configuración de Colores
+Comment[de]=Farbeinstellungen
 
 Keywords=colors,colours,scheme,contrast,Widget colors,Color Scheme
 Keywords[tr]=renkler,şema,kontrast,Renk Tablosu
 Keywords[nl]=kleuren,kleur,schema,contrast,widgetkleuren,kleurenschema
 Keywords[es]=colores,esquema,contraste,Widget colors,Esquema de colores
+Keywords[de]=Farben,Farben,Schema,Kontrast,Widget Farben,Farbschema
 
 Categories=Qt;KDE;X-KDE-settings-looknfeel;X-KDE-tasma-looknfeel
